--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.js",
+    "start": "node src/app.js",
+    "dev" : "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +17,13 @@
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
     "morgan": "^1.9.0"
+  },
+  "now" : {
+    "alias" : "posts-server",
+    "env" : {
+      "MONGODB_POSTS_URL": "@mongodb_posts_url",
+      "MONGODB_POSTS_USER": "@mongodb_posts_user",
+      "MONGODB_POSTS_PWD": "@mongodb_posts_pwd"
+    }
   }
 }
